--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "5.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "react-scripts": "3.0.1"
+    "react-scripts": "^4.0.1"
   },
   "resolutions": {
     "babel-jest": "24.8.0"
